--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: mapbox_gl
 description: A Flutter plugin for integrating Mapbox Maps inside a Flutter application on Android, iOS and web platfroms.
 version: 1.0.0
-homepage: https://github.com/KumaloWilson/maps.git
+homepage: https://github.com/KumaloWilson/maps
 
 environment:
   sdk: "^3.6.0"
@@ -13,11 +13,11 @@ dependencies:
     sdk: flutter
   mapbox_gl_platform_interface:
     git:
-      url: https://github.com/KumaloWilson/maps.git
+      url: https://github.com/tobrun/flutter-mapbox-gl.git
       path: mapbox_gl_platform_interface
   mapbox_gl_web:
     git:
-      url: https://github.com/KumaloWilson/maps.git
+      url: https://github.com/tobrun/flutter-mapbox-gl.git
       path: mapbox_gl_web
   collection: ^1.19.1
   mustache_template: ^2.0.0
