--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,11 @@ dependencies:
     sdk: flutter
   mapbox_gl_platform_interface:
     git:
-      url: https://github.com/tobrun/flutter-mapbox-gl.git
+      url: https://github.com/KumaloWilson/maps.git
       path: mapbox_gl_platform_interface
   mapbox_gl_web:
     git:
-      url: https://github.com/tobrun/flutter-mapbox-gl.git
+      url: https://github.com/KumaloWilson/maps.git
       path: mapbox_gl_web
   collection: ^1.19.1
   mustache_template: ^2.0.0
